tests/Toimik.WarcProtocol.Tests/Data/Invalid/incorrect_content_length.warc
WARC/1.1
WARC-Date: 2000-01-01T12:34:56Z
WARC-Record-ID: <urn:uuid:1a59c5c8-d806-4cdb-83aa-b21495d11063>
WARC-Type: resource
Content-Length: 4

Only 'Only' is read
and the remaining characters (up to the start of the next record)
are discarded


WARC/1.1
WARC-Date: 2000-01-01T12:34:56Z
WARC-Record-ID: <urn:uuid:2a59c5c8-d806-4cdb-83aa-b21495d11063>
WARC-Type: resource
Content-Length: 49

Here till 'WARC' of next record is read


WARC/1.1
WARC-Date: 2000-01-01T12:34:56Z
WARC-Record-ID: <urn:uuid:3a59c5c8-d806-4cdb-83aa-b21495d11063>
WARC-Type: metadata
Content-Length: 87

This record is skipped because its header is partially consumed by the previous record.


WARC/1.1
WARC-Date: 2001-01-01T12:34:56Z
WARC-Record-ID: <urn:uuid:1a59c5c8-d806-4cdb-83aa-b21495d11063>
WARC-Type: resource
Content-Length: 6

foobar